deployment/phpmyadmin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: phpmyadmin
    labels:
        app: phpmyadmin
spec:
    replicas: 1
    selector:
        matchLabels:
            app: phpmyadmin
    template:
        metadata:
            labels:
                app: phpmyadmin
        spec:
            containers: 
            - name: phpmyadmin
              image: phpmyadmin
              ports:
              - containerPort: 80  
---
apiVersion: v1
kind: Service
metadata:
    name: phpmyadmin-service
spec:
    selector:
        app: phpmyadmin
    type: LoadBalancer
    ports:
        - protocol: TCP
          port: 8081
          targetPort: 80
          nodePort: 30000
